--- a/Forecasting_on_Credit_Card_Loan_Application_At_Islamic_Banking.ipynb
+++ b/Forecasting_on_Credit_Card_Loan_Application_At_Islamic_Banking.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "Forecasting on Credit Card Loan Application At Islamic Banking",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
